# plot_frames

./: LICENSE  README.md  pyproject.toml
src/plot_frames/: __init__.py  plot_frames.py  plot_frames2d.py  plot_frames3d.py
src/plot_frames.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.ipynb
